# radann

./: CMakeLists.txt  README.md  main.cu
grad/: activation.h  array.h  assign.h  binary.h  binary_ops.h  constant.h  creation.h  eager_eval.h  extension.h  generators.h  grad.h  kernel.h  linalg.h  random.h  reduce.h  sequence.h  shape.h  storage.h  unary.h  unary_ops.h
grad/core/: array.h  defaults.h  eval.h  real.h  shape.h
grad/cuda/: assign.h  context.h  cublas.h  cusolver.h  device_buffer.h  device_prop.h  host_buffer.h  launch.h  linalg.h  prop.h  random.h  reduce.h  shared_array.h  shared_storage.h  storage.h  unique_array.h
grad/cuda/kernel/: assign.h  reduce.h  shared.h
grad/engine/: access.h  binary.h  binary_eager.h  binary_eltwise.h  binary_lazy.h  binary_map.h  eager_eval.h  eval.h  expr.h  map.h  reduce.h  tape.h  tape_context.h  term.h  unary.h  unary_eager.h  unary_eltwise.h  unary_lazy.h  unary_map.h
grad/functor/: activation.h  binary.h  ext.h  extension.h  identity.h  linalg.h  random.h  reduce.h  sequence.h  unary.h
grad/kernels/: assign.h
grad/meta/: meta.h
grad/ops/: access.h  binary.h  binary_functors.h  expr.h  scalar.h  scalar_functors.h  unary.h  unary_functors.h  unary_functors_ext.h
grad/util/: util.h
grad/xtmp/: binary_ftors_base.h  expr.h  unary_ftors_base.h  unary_ftors_ext.h
radann/: radann.h
radann/api/: creation.h  eval.h  tape.h  using.h
radann/core/: activation.h  array.h  binary.h  creation.h  default.h  eager.h  eval.h  extension.h  linalg.h  random.h  reduce.h  sequence.h  shape.cpp  shape.h  tape.h  unary.h  util.h
radann/cuda/: assign.h  cublas.h  cusolver.h  host_buffer.h  launch.h  prop.h  prop_context.h  random.h  reduce.h  shared_array.h  shared_storage.h  unique_array.h
radann/cuda/kernel/: assign.h
radann/diff/: aspect.h  backward.h  entry.h  grad_binary.h  grad_unary.h  is_ad.h  policy_dynamic_ad.cpp  policy_dynamic_ad.h  policy_no_ad.cpp  policy_no_ad.h  propagate.h  strategy_dynamic_ad.h  strategy_no_ad.h  tape.h  tape_context.h
radann/engine/: access.h  binary_eager.h  binary_lazy.h  expr.h  tape.h  tape_context.h  term.h  unary_eager.h  unary_lazy.h
radann/expr/: access.h  base.h  binary.h  eager.h  element.h  generator.h  tape.h  tape_context.h  term.h  unary.h
radann/func/: binary.h  linalg.h  random.h  reduce.h  sequence.h  unary.h
radann/functor/: activation.h  binary.h  extension.h  linalg.h  random.h  reduce.h  sequence.h  unary.h
radann/meta/: meta.h
radann/oper/: binary.h  random.h  sequence.h  unary.h
radar/: radar.h
radar/core/: activation.h  array.h  binary.h  creation.h  default.h  eval.h  extension.h  linalg.h  random.h  reduce.h  sequence.h  shape.h  unary.h  util.h
radar/cuda/: assign.h  cublas.h  cusolver.h  host_buffer.h  launch.h  prop_context.h  random.h  reduce.h  shared_array.h  shared_storage.h  unique_array.h
radar/cuda/kernel/: assign.h
radar/engine/: access.h  binary_eager.h  binary_lazy.h  expr.h  tape.h  tape_context.h  term.h  unary_eager.h  unary_lazy.h
radar/functor/: activation.h  binary.h  extension.h  linalg.h  random.h  reduce.h  sequence.h  unary.h
